--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@prisma/client": "^6.5.0",
     "axios": "^1.8.4",
     "cheerio": "^1.0.0",
+    "lucide-react": "^0.485.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-modal": "^3.16.3",
     "react-router-dom": "^6.30.0"
   },
