--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@heroicons/react": "^1.0.6",
     "@prisma/client": "^6.5.0",
     "axios": "^1.8.4",
+    "bcryptjs": "^3.0.2",
     "cheerio": "^1.0.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.485.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -33,6 +35,7 @@
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
     "postcss": "^8.4.49",
+    "prisma": "^6.5.0",
     "tailwindcss": "^3.4.17",
     "vite": "^6.1.0"
   }
